[BUGFIX] styleguide: Fix broken styleguide example "fence" display
https://github.com/TYPO3-CMS/styleguide/pull/343

Since bootstrap v5 the class .btn-block is !important and thus overrides
the display inline-block statement. This is now fixed by changing the
class name and adjusting the padding to a constant px value.

--- a/typo3/sysext/styleguide/Resources/Private/Styles/_components/_fence.scss
+++ b/typo3/sysext/styleguide/Resources/Private/Styles/_components/_fence.scss
@@ -8,13 +8,14 @@ ul.fence {
 			padding-bottom: 0;
 		}
 
-		.btn-block {
+		.btn-round {
 			border-radius: 100%;
 			display: inline-block;
 			margin-right: 5px;
 			position: relative;
 			width: 50px;
 			z-index: 2;
+			padding: 12px 12px;
 		}
 
 		&:before {
